--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -16,11 +16,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    
-    - name: Install Node.js
-      uses: actions/setup-node@v1
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
       with:
-        node-version: 18.x
+        node-version: 16
     
     - name: Install NPM packages
       run: npm ci
