--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x] # We will deploy with only one version of node  
+        node-version: ['node16'] # We will deploy with only one version of node  
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,7 +30,7 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test      
+          # npm test      
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
